# kipsum

./: .gitignore  LISENCE  README.md  pyproject.toml  tests.py
kipsum/: __init__.py  kipsum.py
kipsum/sources/: yechan.json
